2009-02-26  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/controller.c (controller_start_playing_cb)
	* src/protocol.c (lastfm_parse_track, lastfm_parse_playlist):
	Send session cookie in all mp3 requests.

2009-02-24  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c
	(lastfm_set_radio):
	Store the radio title returned in the 'stationname' parameter.
	(lastfm_request_playlist, lastfm_parse_playlist)
	(lastfm_request_custom_playlist):
	Use the aforementioned 'stationname' if no playlist title is
	returned by the XSPF request.

	* src/controller.c
	(controller_play_radio_by_url_thread)
	(start_playing_get_pls_thread):
	Use the playlist title returned by lastfm_set_radio.

	Fixes #3498 (Listening to... is broken)

2009-02-24  Heinrich Schwietering  <hankschwie@googlemail.com>

	* scripts/vagalumectl: New commands to show and hide the player
	window.

2009-02-23  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (lastfm_get_track_cover_image)
	* src/uimisc.c (ui_create_options_list)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_save_to_disk)
	* src/xmlrpc.c (new_request):
	Fixed typos.

2009-02-21  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (lastfm_get_track_cover_image): Use
	g_static_mutex_get_mutex() instead of creating a separate GMutex.

2009-02-21  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.c (lastfm_track_ref, lastfm_track_unref)
	* src/audio.c (get_audio_thread, bus_call, lastfm_audio_init)
	* src/scrobbler.c (rsp_session_unref, rsp_session_ref)
	(rsp_session_new):
	Replace GMutex by faster g_atomic_* operations.

2009-02-11  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c: Update copyright on about dialog.

2009-02-11  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog
	* debian/copyright
	* README
	* scripts/vagalumectl
	* Makefile.am
	* src/Makefile.am
	* src/*.[ch]:
	Set Igalia as copyright holder.

2009-02-10  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac